test/resources/valid/com/boothj5/jarchexample/application/person/facade/PersonFacade.java
package com.boothj5.jarchexample.application.person.facade;

import java.util.List;

import com.boothj5.jarchexample.applicaion.common;
import com.boothj5.jarchexample.application.person.service.PersonService;
import com.boothj5.jarchexample.application.address.service.AddressService;
import com.boothj5.jarchexample.application.telephonenumber.service.TelephoneNumberService;
