test/resources/invalid/com/boothj5/jarchexample/application/address/facade/AddressFacade.java
package com.boothj5.jarchexample.application.address.facade;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
import com.boothj5.jarchexample.application.address.service.AddressService;
import com.boothj5.jarchexample.application.person.service.PersonService;
import com.boothj5.jarchexample.application.telephonenumber.service.TelephoneNumberService;
